# xlsx-quick-append-rs

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: release-polars.yml  release.yml  rust.yml
docs/: overview.md  usage.md
python-bindings/: Cargo.toml  justfile  pyproject.toml
python-bindings/excelsior/: __init__.pyi
python-bindings/speed_tests/: excelsior_speed.py  excelsior_speed_style.py  openpyxl_speed.py  speed-test-xlsxeditor.md  speed-test.md  xlsxeditor_speed.py
python-bindings/src/: lib.rs
python-bindings/tests/: add_ws.py  table_border.py  test1.py  test_append_ws.py  test_polars.py  test_scanner.py  test_starter.py  test_styles.py
python-bindings/xlsx_append_py/: __init__.py  __init__.pyi
rust-core/: Cargo.toml
rust-core/src/: files_part.rs  lib.rs  polars_part.rs  read_part.rs  style.rs  test.rs
src/: lib.rs  main.rs  test.rs
test/: numeric_format_test.xlsx  style_test.xlsx  test.xlsx  test_last_row_index.xlsx  test_new_ws.xlsx  test_polars.xlsx  test_sum.xlsx
