[package]
name = "excelsior"
version = "0.4.2"
edition = "2021"

[lib]
name = "excelsior"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
rust-core = { path = "../rust-core", default-features = false }
anyhow = "1.0.98"
pyo3-polars = { version = "0.22.0", optional = true }

[features]
default = []
polars = ["pyo3-polars", "rust-core/polars"]
