[build-system]
requires = ["maturin>=1.9"]
build-backend = "maturin"

[project]
name = "excelsior"
dynamic = ["version"]
description = "Blazingly fast append to xlsx file"
readme = { file = "../README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "../LICENSE" }
authors = [{ name = "Mihail Boreyko", email = "krakotay@yandex.ru" }]
keywords = ["excel", "xlsx", "rust", "append"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "License :: OSI Approved :: GPL-3.0 License",
    "Operating System :: OS Independent",
]
urls = { Homepage = "https://github.com/krakotay/excelsior", Issues = "https://github.com/krakotay/excelsior/issues" }
dependencies = [
    "pyarrow>=20"        # или без версии: "pyarrow"
]

[tool.maturin]
bindings = "pyo3"
