[package]
name = "rust-core"
version = "0.1.0"
edition = "2024"

[profile.test]
debug = true

[lib]
name = "rust_core"
path = "src/lib.rs"
test = true

[dependencies]
anyhow = "1.0.98"
quick-xml = "0.38.0"
tempfile = "3.20.0"
zip = { version = "4.3.0", default-features = false, features = ["deflate"] }
# [profile.release]
# debug = true
